--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,3 +1,5 @@
+@import "colors";
+
 body {
   margin: 0;
   padding: 0;
@@ -7,4 +9,8 @@ body {
 
 html, body, #root {
   height: 100%;
+}
+
+h2 {
+  color: $defaultFontColor;
 }
