--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -14,3 +14,14 @@ html, body, #root {
 h2 {
   color: $defaultFontColor;
 }
+
+.green-button {
+  background-color: $button;
+  font-weight: bold;
+  border: none;
+  color: $defaultFontColor;
+  transition: background-color 1s, color 1s;
+  &:hover {
+    background-color: $buttonHover;
+  }
+}
