--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -17,6 +17,7 @@
 
   .select-wrapper {
     display: inline;
+    padding-left: 10px;
     select {
       width: 70px;
       border: none;
@@ -31,7 +32,7 @@
       }
       &:hover {
         color: $buttonTextGrey;
-        background: #eeeeee;
+        background: $buttonBackground;
       }
     }
     &:after {
@@ -43,6 +44,10 @@
       position: absolute;
       pointer-events: none;
     }
+  }
+
+  button {
+    background-color: $buttonBackground;
   }
 }
 
